Update Swaziland to Eswatini

--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_transit_refugee_not_leaving_airport.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_transit_refugee_not_leaving_airport.govspeak.erb
@@ -53,7 +53,7 @@
   * South Sudan
   * Sri Lanka
   * Sudan
-  * Swaziland
+  * Eswatini
   * Syria
   * Tanzania
   * Turkey - unless you have a diplomatic passport
