--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/russia/_title.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/russia/_title.govspeak.erb
@@ -1,5 +1,5 @@
 <% if calculator.partner_is_same_sex? %>
-  Civil partnership in Russia
+  Same-sex marriage in Russia
 <% else %>
   Marriage in Russia
 <% end %>
