--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_no_visa_needed.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_no_visa_needed.govspeak.erb
@@ -3,11 +3,7 @@
 <% end %>
 
 <% content_for :body do %>
-  <% if calculator.passport_country_is_croatia? %>
-
-    However, you may need a [registration certificate](/croatian-national) if you want to stay and work.
-
-  <% elsif calculator.study_visit? %>
+  <% if calculator.study_visit? %>
 
     However, you should bring documents with you to show at the border that you:
 
