user Russia, partner British, opposite sex
Removed references to the consulate as it's closing.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/russia/ceremony_country/partner_british/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/russia/ceremony_country/partner_british/_opposite_sex.erb
@@ -46,9 +46,9 @@ The embassy or notary public will charge a fee for taking the oath.
 
 If you give notice at a notary public, you must post the signed forms and any supporting documents to the British embassy afterwards.
 
-^They may charge a fee to return your documents to you.^
+^The embassy may charge a fee to return your documents to you.^
 
-The embassy will display your notice of marriage publicly for 7 days. 
+Your notice of marriage will be displayed publicly for 7 days at the embassy. 
 
 They’ll then issue your CNI (as long as nobody has registered an objection). There’s an additional fee for this - they’ll contact you to arrange payment.
 
