Update EU national callout
Change callout to include new settled status scheme information for EU citizens.

From: https://govuk.zendesk.com/agent/tickets/2903007

--- a/lib/smart_answer_flows/student-finance-calculator/student_finance_calculator.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-calculator/student_finance_calculator.govspeak.erb
@@ -12,7 +12,7 @@
   + 2017 to 2018
   + 2018 to 2019
 
- ^There will be no change to the [rights and status of EU nationals living in the UK, nor UK nationals living in the EU](https://www.gov.uk/government/collections/uk-leaving-the-eu-what-you-need-to-know), while the UK remains in the EU.^
+ ^There will be no change to the rights and status of EU citizens living in the UK until 2021. You and your family can apply for ‘[settled status](https://www.gov.uk/settled-status-eu-citizens-families)' to continue living in the UK after June 2021. The scheme will open fully by March 2019.^
 
   Use the student finance calculator to estimate:
 
