Revert "Germany marriage abroad"

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/germany/_title.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/germany/_title.govspeak.erb
@@ -1,7 +1,7 @@
 <% content_for :title do %>
   <% if calculator.partner_is_same_sex? %>
     <% if calculator.partner_is_national_of_ceremony_country? %>
-      Same-sex marriage in Germany
+      Civil partnership in Germany
     <% else %>
       Same-sex marriage in Germany
     <% end %>
