--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/germany/ceremony_country/partner_local/_same_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/germany/ceremony_country/partner_local/_same_sex.erb
@@ -1,25 +1,20 @@
-##Before you start
+Same-sex relationships in Germany that are recognised as civil partnerships under British law are known as ’Lebenspartnerschaft’, or ’life partnership’.
 
-Contact the Civil Registry Office (‘Standesamt’) or church where you plan to marry to find out about local marriage laws.
+Contact the relevant local authorities in Germany to find out about local laws, including what documents you’ll need.
 
-You must have a consultation with a Standesamt before making any further arrangements. They’ll let you know about the procedure and which documents you’ll need. If one of you does not speak German, you’ll also need to bring a [qualified interpreter](https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/420647/translators_interpreters_germany.pdf) to your appointment.
+##What you need to do
 
-^You should [get legal advice](https://www.gov.uk/government/collections/list-of-lawyers) before making any plans.^
+You don’t need a certificate of no impediment (CNI) to prove you’re allowed to marry if you’re a British national resident outside of the UK. However, you’ll need to apply for an exemption (‘Befreiung von der Beibringung des Ehefähigkeitszeugnisses’) from the Higher Regional Court (‘Oberlandesgericht’) in the region where you want to marry.
 
-##After you get married
+Contact the local registry office (‘Standesamt’) where you’re getting married - they’ll tell you what you need to do.
 
-Your marriage will be recognised in the UK if:
+If the Standesamt does ask you for a CNI (‘Ehefähigkeitszeugnis’), refer them to the relevant part of the [German Civil Code](http://www.gesetze-im-internet.de/bgb/__1309.html) (‘Bürgerliches Gesetzbuch’).
 
-* you follow the correct process according to the law in Germany
-* it would be [allowed under UK law](https://www.gov.uk/marriages-civil-partnerships)
+You’ll need to complete a statutory declaration at the registry office as part of the application process.
 
-You do not need to register your marriage in the UK.
+##Naturalisation of your partner if they move to the UK
 
-If you need extra copies of your marriage certificate, you can apply for them at the Standesamt where you got married.
-
-###Naturalisation of your partner if they move to the UK
-
-Your partner can apply to [become a British citizen](https://www.gov.uk/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
+Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
 
 
 
