--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/germany/third_country/partner_other/_same_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/germany/third_country/partner_other/_same_sex.erb
@@ -1,25 +1,67 @@
-##Before you start
+You may be able to get married at the British embassy or consulate in Germany.
 
-Contact the Civil Registry Office (‘Standesamt’) or church where you plan to marry to find out about local marriage laws.
+Contact the British Embassy in Berlin to make an appointment.
 
-You must have a consultation with a Standesamt before making any further arrangements. They’ll let you know about the procedure and which documents you’ll need. If one of you does not speak German, you’ll also need to bring a [qualified interpreter](https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/420647/translators_interpreters_germany.pdf) to your appointment.
+$A
+British Embassy Berlin
+Consular Section
+Wilhelmstraße 70/71
+10117 Berlin
+Germany
+$A
 
-^You should [get legal advice](https://www.gov.uk/government/collections/list-of-lawyers) before making any plans.^
+$C
+Telephone: +49 (0) 30 204 570
 
-##After you get married
+Email: <germany.consulate@fco.gov.uk>
 
-Your marriage will be recognised in the UK if:
+[British Embassy Berlin - opening hours](https://www.gov.uk/world/organisations/british-embassy-berlin/office/british-embassy-berlin)
+$C
 
-* you follow the correct process according to the law in Germany
-* it would be [allowed under UK law](https://www.gov.uk/marriages-civil-partnerships)
+##What documents you’ll need
 
-You do not need to register your marriage in the UK.
+You need to have been living in Germany for 21 days. You and your partner will need to sign a declaration and provide proof of residence for example, an employer’s letter or a bank statement.
 
-If you need extra copies of your marriage certificate, you can apply for them at the Standesamt where you got married.
+You’ll both need to bring your original passports. If either of you have been divorced, widowed or in a civil partnership before, you’ll also need to provide:
 
-###Naturalisation of your partner if they move to the UK
+- a [decree absolute or final order](/copy-decree-absolute-final-order)
+- the [death certificate](/order-copy-birth-death-marriage-certificate/)
 
-Your partner can apply to [become a British citizen](https://www.gov.uk/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
+##What you need to do
+
+At your appointment the embassy or consulate will give you:
+
+- a notice of registration
+- a declaration that you and your partner will need to swear, stating that you’re legally entitled to marry
+
+Once you’ve completed these and paid the registration fee, the embassy or consulate will display your notice publicly for 14 days.
+
+As long as nobody registers an objection you can get married up to 3 months after you gave notice.
+
+You’ll need to bring two witnesses to your ceremony - they’ll need to show their photo ID (for example passport or driver’s licence).
+
+You’ll need to pay a fee to register your marriage and a fee for your marriage certificate.
+
+^All same-sex marriages must take place under English and Welsh or Scottish law even if you live in or are from Northern Ireland. Tell the embassy or consulate which law you want to get married under at your appointment.^
+
+##Naturalisation of your partner if they move to the UK
+
+Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
+
+## Fees
+
+<%= render partial: 'consular_fees_table_items.govspeak.erb',
+    collection: calculator.services,
+    as: :service,
+    locals: { calculator: calculator } %>
+
+You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Germany](/government/publications/germany-consular-fees).
+
+<%= render partial: 'how_to_pay.govspeak.erb', locals: {calculator: calculator} %>
+
+##Convert a civil partnership to a same-sex marriage
+
+If you’ve already entered into a civil partnership you may be able to convert it to a same-sex marriage - read [‘Convert a civil partnership to a same-sex marriage abroad’](/convert-civil-partnership-abroad).
 
 
 
