--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/germany/uk/partner_local/_same_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/germany/uk/partner_local/_same_sex.erb
@@ -1,25 +1,30 @@
-##Before you start
+Same-sex relationships in Germany that are recognised as civil partnerships under British law are known as ’Lebenspartnerschaft’, or ’life partnership’.
 
-Contact the Civil Registry Office (‘Standesamt’) or church where you plan to marry to find out about local marriage laws.
+Contact the [Embassy of Germany](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local laws, including what documents you’ll need.
 
-You must have a consultation with a Standesamt before making any further arrangements. They’ll let you know about the procedure and which documents you’ll need. If one of you does not speak German, you’ll also need to bring a [qualified interpreter](https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/420647/translators_interpreters_germany.pdf) to your appointment.
+You should also check the [travel advice for Germany](/foreign-travel-advice/germany).
 
-^You should [get legal advice](https://www.gov.uk/government/collections/list-of-lawyers) before making any plans.^
+##What you need to do
 
-##After you get married
+You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to enter into a civil partnership or equivalent in Germany.
 
-Your marriage will be recognised in the UK if:
+You can normally get a CNI by giving a notice of marriage at your local register office or registrar in the UK. Find your local office or registrar in [England and Wales](https://www.gov.uk/register-offices), [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us).
 
-* you follow the correct process according to the law in Germany
-* it would be [allowed under UK law](https://www.gov.uk/marriages-civil-partnerships)
+^A CNI issued in Scotland is valid for 3 months. A CNI issued in England, Wales or Northern Ireland will not expire. Check with your local register office to find out how long a CNI is valid if you live in the Channel Islands or the Isle of Man. You should also check with the local authorities in Germany to find out how long a CNI is valid under local law.^
 
-You do not need to register your marriage in the UK.
+###Translation
 
-If you need extra copies of your marriage certificate, you can apply for them at the Standesamt where you got married.
+Check with the local authorities (standesamt) in Germany if you need to get your UK-issued CNI translated.
 
-###Naturalisation of your partner if they move to the UK
+[Find a translator abroad](/government/collections/lists-of-translators-and-interpreters), or in the UK through the [Institute of Linguists](http://www.ciol.org.uk)
 
-Your partner can apply to [become a British citizen](https://www.gov.uk/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
+You should also check with the local authorities if you need to provide [legalised](/get-document-legalised) and translated copies of any other documents.
+
+%The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (eg marriage certificate or deed poll).%
+
+##Naturalisation of your partner if they move to the UK
+
+Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
 
 
 
