--- a/lib/smart_answer_flows/state-pension-age/state_pension_age.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-age/state_pension_age.govspeak.erb
@@ -11,8 +11,6 @@ Your State Pension age is the earliest age you can start receiving your State Pe
 
 Your State Pension age is worked out based on your gender and date of birth. 
 
-You can [keep working after you reach State Pension age](/working-retirement-pension-age). ‘Default retirement age’ (a forced retirement age of 65) no longer exists.
-
 ^[The State Pension age is under review](/government/news/proposed-new-timetable-for-state-pension-age-increases) and may change in the future.^
 
 Use this tool to check: 
@@ -21,4 +19,10 @@ Use this tool to check:
 - your Pension Credit qualifying age
 - when you'll be eligible for free bus travel
 
+<% end %>
+
+<% content_for :post_body do %>
+You can [keep working after you reach State Pension age](/working-retirement-pension-age). ‘Default retirement age’ (a forced retirement age of 65) no longer exists.
+
+[Check your State Pension](/check-state-pension) to calculate how much money you’ll get.
 <% end %>
