--- a/lib/smart_answer_flows/marriage-abroad/marriage_abroad.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/marriage_abroad.govspeak.erb
@@ -7,18 +7,15 @@
 <% end %>
 
 <% content_for :body do %>
-  Contact the local authorities in the country where you want to get married or enter into a civil partnership to find out what you need to do.
+If you’re a British national getting a marriage or civil partnership abroad, you might need certain documents from the UK government, for example a certificate of no impediment (CNI). 
 
-  Your marriage or civil partnership should be recognised in the UK if you follow the correct process according to local law - you won’t need to register it in the UK.
+Use this tool to find out how to get the documents you'll need.
 
-  You might be asked to get certain documents from the UK government if you’re a [British national](http://www.ukba.homeoffice.gov.uk/britishcitizenship/aboutcitizenship/). Use this tool to find out:
+You'll need to contact the local authorities where you want to get married to find out what you need to do.
 
-  - which documents you can get
-  - how to apply for them
+Your marriage or civil partnership will be recognised in the UK if you followed the correct process in the country where you got married and it would be allowed [under UK law](/marriages-civil-partnerships).
 
-  There’s a separate guide if you want to [get married or enter into a civil partnership in the UK](/marriages-civil-partnerships).
-
-  %If you’re living abroad and you want to get married in a different country, you’ll need to go to that country to post notice of your marriage. [Read the guidance on posting notice in a third country](/if-you-live-abroad-and-wish-to-marry-in-a-third-country).%
-
-  *[GRO]:General Register Office
+^ There’s a separate guide if you want to [get married or enter into a civil partnership in the UK](/marriages-civil-partnerships).
+ 
+*[CNI]: certificate of no impediment 
 <% end %>
