Updated marriage abroad start page
Added in bullet points about marriages being recognised in the UK.

--- a/lib/smart_answer_flows/marriage-abroad/marriage_abroad.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/marriage_abroad.govspeak.erb
@@ -13,7 +13,10 @@ Use this tool to find out how to get the documents you'll need.
 
 You'll need to contact the local authorities where you want to get married to find out what you need to do.
 
-Your marriage or civil partnership will be recognised in the UK if you followed the correct process in the country where you got married and it would be allowed [under UK law](/marriages-civil-partnerships).
+Your marriage or civil partnership will be recognised in the UK if:
+
+- you followed the correct process in the country where you got married
+- it would be allowed [under UK law](/marriages-civil-partnerships)
 
 ^ There’s a separate guide if you want to [get married or enter into a civil partnership in the UK](/marriages-civil-partnerships).
  
