--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/uganda/ceremony_country/partner_british/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/uganda/ceremony_country/partner_british/_opposite_sex.erb
@@ -1,11 +1,40 @@
-
 Contact the relevant local authorities in Uganda to find out about local marriage laws, including what documents you’ll need.
 
-^You should [get legal advice](/government/collections/list-of-lawyers) before making any plans.^
+^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Uganda](/foreign-travel-advice/uganda) before making any plans.
 
 The UK doesn’t issue certificates of no impediment (CNI) for marriages in Commonwealth countries. You’ll need to explain this if you’re asked to provide a CNI or a similar document to prove you’re allowed to marry.
 
-*[CNI]:certificate of no impediment
+##What you need to do
+
+Some marriage authorities in Uganda may accept a document showing that you’re free to marry issued in the UK.
+
+If you are from England or Wales, you can get a ‘no trace letter’ from the General Register Office. ‘No trace letters’ cost £50 for each 10 year period from age 16 or when you entered the UK. Specify how many years you need the search to cover and quote reference ‘SEARCH 123’. It can take up to 3 weeks for a ‘no trace letter’ to be issued.
+
+$C
+**General Register Office**\\
+Telephone: +44 (0)300 123 1837 (8am to 8pm Monday to Friday and 9am to 4pm Saturday)
+$C
+
+If you are from Scotland, you can get a ’to whom it may concern’ letter from the [National Records of Scotland](https://www.nrscotland.gov.uk/registration/getting-married-abroad/what-documents-will-i-need-to-provide).
+
+If you are from Northern Ireland, you can get a ‘marriage index search’ from [nidirect](https://www.nidirect.gov.uk/articles/marriage-outside-uk).
+
+##After you get married
+
+Your marriage will be recognised in the UK if:
+
+- you follow the correct process according to the law in Uganda
+- it would be [allowed under UK law](/marriages-civil-partnerships)     
+
+You won’t need to register your marriage in the UK.
+
+If you need extra copies of your marriage certificate, you can apply for them at the register office or venue where you got married.
+
+
+*[CNI]: certificate of no impediment
+
+
+
 
 
 
