Add a new paragraph on eligibility for part time medical/dental students

--- a/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_all_students.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_all_students.govspeak.erb
@@ -1,6 +1,10 @@
 <% content_for :body do %>
   <%= render partial: 'disclaimer.govspeak.erb' %>
 
+  <% if course_studied == 'dental-medical-healthcare' %>
+    To qualify for a Maintenance Loan you must be studying a DipHE in dental hygiene and dental therapy or operating department practice, or a Foundation Degree in dental hygiene and dental therapy.
+  <% end %>
+
   ##Student finance
 
   You could get per year:
