--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/uganda/third_country/partner_local/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/uganda/third_country/partner_local/_opposite_sex.erb
@@ -6,7 +6,7 @@ The UK doesn’t issue certificates of no impediment (CNI) for marriages in Comm
 
 ##What you need to do
 
-Some marriage authorities in Uganda may accept a document showing that you’re free to marry issued in the UK.
+Some marriage authorities in Uganda may accept a document showing no record of marriage in the UK.
 
 If you are from England or Wales, you can get a ‘no trace letter’ from the General Register Office. ‘No trace letters’ cost £50 for each 10 year period from age 16 or when you entered the UK. Specify how many years you need the search to cover and quote reference ‘SEARCH 123’. It can take up to 3 weeks for a ‘no trace letter’ to be issued.
 
