--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/_same_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/_same_sex.erb
@@ -10,7 +10,7 @@ The UK doesn’t issue certificates of no impediment (CNI) for marriages in Comm
 
 You can get a letter to explain this if you’re asked to provide a CNI or a similar document to prove you’re allowed to marry.
 
-Book an appointment to collect the letter at the [British Consulate General in Cape Town](/world/organisations/british-consulate-general-cape-town) or the [British High Commission in Pretoria](/world/organisations/british-high-commission-pretoria). The letter is free. If you can’t go to an appointment, you can ask a friend or family member to make an appointment and collect it for you.
+Book an appointment to collect the letter at the [British Consulate General in Cape Town](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-cape-town/providing-an-informative-note/slot_picker) or the [British High Commission in Pretoria](https://www.consular-appointments.service.gov.uk/fco/#!/british-high-commission-pretoria/providing-an-informative-note/slot_picker). The letter is free. If you can’t go to an appointment, you can ask a friend or family member to make an appointment and collect it for you.
 
 ##After you get married
 
