Add a new paragraph for eligibility for part time teacher training students

--- a/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_all_students.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_all_students.govspeak.erb
@@ -3,6 +3,8 @@
 
   <% if course_studied == 'dental-medical-healthcare' %>
     To qualify for a Maintenance Loan you must be studying a DipHE in dental hygiene and dental therapy or operating department practice, or a Foundation Degree in dental hygiene and dental therapy.
+  <% elsif course_studied == 'teacher-training' %>
+    To qualify for a Maintenance Loan you must be studying an Initial Teacher Training course (if it's degree level or above).
   <% end %>
 
   ##Student finance
