--- a/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_all_students.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_all_students.govspeak.erb
@@ -5,6 +5,14 @@
     To qualify for a Maintenance Loan you must be studying a DipHE in dental hygiene and dental therapy or operating department practice, or a Foundation Degree in dental hygiene and dental therapy.
   <% elsif course_studied == 'teacher-training' %>
     To qualify for a Maintenance Loan you must be studying an Initial Teacher Training course (if it's degree level or above).
+  <% elsif course_studied == 'none-of-the-above' %>
+    To qualify for a Maintenance Loan, you must be studying one of the following courses:
+    
+    - a first degree, for example BA, BSc or BEd
+    - a Foundation Degree in dental hygiene and dental therapy
+    - DipHe in dental hygiene and dental therapy or operating department practice
+    - an integrated master's degree
+    - a Graduate Certificate or Graduate Diploma
   <% end %>
 
   ##Student finance
