--- a/lib/smart_answer_flows/calculate-your-holiday-entitlement/questions/basis_of_calculation.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-your-holiday-entitlement/questions/basis_of_calculation.govspeak.erb
@@ -6,8 +6,8 @@
   "days-worked-per-week": "days worked per week",
   "hours-worked-per-week": "hours worked per week",
   "casual-or-irregular-hours": "casual or irregular hours",
-  "annualised-hours": "annualised hours",
-  "compressed-hours": "compressed hours",
+  "annualised-hours": "annualised hours (hours worked per year)",
+  "compressed-hours": "compressed hours (full-time hours over fewer days)",
   "shift-worker": "shifts"
 ) %>
 
