--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/finland/_ceremony_country.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/finland/_ceremony_country.govspeak.erb
@@ -10,9 +10,9 @@ You need to swear an affidavit or make an affirmation that says you’re legally
 
 This costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %> per person. You can pay in the [local currency](/government/publications/finland-consular-fees) with cash or card (not Visa Electron).
 
-s1. Download and fill in the [questionnaire](/government/publications/civil-status-questionnaire-finland).
-s2. Send the completed questionnaire to <helsinki.consularenquiries@fco.gov.uk> at least 2 working days before your appointment at the embassy.
-s3. [Make an appointment at the embassy in Finland](https://www.consular-appointments.service.gov.uk/fco#!/british-embassy-helsinki/oaths-affirmations-and-affidavits/slot_picker) to swear your affidavit or make your affirmation.
+s1. [Make an appointment at the embassy in Finland](https://www.consular-appointments.service.gov.uk/fco#!/british-embassy-helsinki/oaths-affirmations-and-affidavits/slot_picker) to swear your affidavit or make your affirmation.
+s2. Download and fill in the [questionnaire](/government/publications/civil-status-questionnaire-finland) to bring to your appointment.
+s3. The embassy will contact you to confirm your appointment and any other information you need to bring.
 
 ^ Your partner will also need to swear an affirmation if they’re British. If they’re not British or Finnish, they might need an equivalent document from their government.^
 
