--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/kuwait/third_country/partner_british/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/kuwait/third_country/partner_british/_opposite_sex.erb
@@ -64,7 +64,7 @@ You can normally get a CNI by giving a notice of marriage at your local register
 
 ###Legalisation and translation
 
-Your CNI needs to be translated into Arabic. You also need to it ‘legalised’ (certified as genuine) by:
+Your CNI needs to be translated into Arabic. You also need to get it ‘legalised’ by:
 
 - the [Foreign and Commonwealth Office (FCO)](/get-document-legalised)
 - the Kuwait Embassy in London
