--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/kuwait/ceremony_country/partner_local/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/kuwait/ceremony_country/partner_local/_opposite_sex.erb
@@ -29,7 +29,7 @@ If your father is not in Kuwait, you’ll need his written consent. If you canno
 
 You may be able to use a certificate of no impediment (CNI) issued and legalised in the UK. Check with the [Kuwait Ministry of Justice](https://www.moj.gov.kw/en/Pages/default.aspx) to see if it can be used in place of written consent.
 
-You need to get your written consent and CNI translated into Arabic. You also need to get them ‘legalised’ (certified as genuine) by:
+You need to get your written consent and CNI translated into Arabic. You also need to get them ‘legalised’ by:
 
 - the [Foreign and Commonwealth Office (FCO)](/get-document-legalised)
 - the Kuwait Embassy in London
