--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/third_country/partner_local/_same_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/third_country/partner_local/_same_sex.erb
@@ -16,7 +16,7 @@ $A
 
 $C
 Switchboard: +55 (61) 3329 2300
-Facsmile: +55 (61) 3329 2369
+Facsimile: +55 (61) 3329 2369
 
 [British Embassy Brasilia - opening hours](https://www.gov.uk/world/organisations/british-embassy-brazil/office/british-embassy-brasilia)
 $C
@@ -30,7 +30,7 @@ $A
 
 $C
 Switchboard: +55 (11) 3094 2700
-Facsmile: +55 (11) 3094 2717
+Facsimile: +55 (11) 3094 2717
 
 [British Consulate General São Paulo  - opening hours](https://www.gov.uk/world/organisations/british-embassy-brazil/office/british-consulate-general-sao-paulo)
 $C
@@ -44,7 +44,7 @@ $A
 
 $C
 Switchboard: +55 (21) 2555 9600 
-Facsmile: +55 (21) 2555 9671
+Facsimile: +55 (21) 2555 9671
 
 [British Consulate General Rio de Janeiro - opening hours](https://www.gov.uk/world/organisations/british-embassy-brazil/office/british-consulate-general-rio-de-janeiro)
 $C
