Updated bullet point not_enough_earned
CHANGED
- on the 1st payday after they return to work

TO
- on the 1st normal payday after they go off sick

--- a/lib/smart_answer_flows/calculate-statutory-sick-pay/outcomes/not_earned_enough.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-statutory-sick-pay/outcomes/not_earned_enough.govspeak.erb
@@ -4,7 +4,7 @@
 You must send them [form SSP1](/government/publications/statutory-sick-pay-employee-not-entitled-form-for-employers) either:
 
 - within 7 days of them going off sick
-- on the 1st payday after they return to work
+- on the 1st normal payday after they go off sick
 
    They may be able to get [Employment Support Allowance (ESA)](/employment-support-allowance).
 <% end %>
