--- a/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_full_time_students.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_full_time_students.govspeak.erb
@@ -40,7 +40,7 @@
       - [Social Work Bursary](/social-work-bursaries) (NHS funding towards your fees and living costs)
     <% end %>
 
-    <%= render partial: 'uk_extra_help.govspeak.erb' %>
+    <%= render partial: 'uk_extra_help.govspeak.erb', locals: { course_type: course_type } %>
 
     <%= render partial: 'next_steps.govspeak.erb' %>
   <% end %>
