--- a/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_full_time_dental_medical_students.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_full_time_dental_medical_students.govspeak.erb
@@ -36,7 +36,7 @@
     <%= render partial: 'nhs_full_time_funding.govspeak.erb', locals: { uk_ft_circumstances: uk_ft_circumstances, calculator: calculator } %>
   <% end %>
 
-  <%= render partial: 'uk_extra_help.govspeak.erb' %>
+  <%= render partial: 'uk_extra_help.govspeak.erb', locals: { course_type: course_type } %>
 
   <%= render partial: 'next_steps.govspeak.erb' %>
 <% end %>
