Add same sex marriage content for Austria
Trello cards:
- https://trello.com/c/OhrOk2AQ/1978-add-same-sex-marriage-to-austria-getting-married-abroad
- https://trello.com/c/Jw8oV95g/731-add-same-sex-marriage-content-to-austria-marriage-abroad

Co-Authored-By: hannahwhittaker <hannah.whittaker@digital.cabinet-office.gov.uk>

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/austria/ceremony_country/partner_british/_same_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/austria/ceremony_country/partner_british/_same_sex.erb
@@ -1,25 +1,54 @@
+It’s possible to have either a civil partnership or a same-sex marriage in Austria.
+
 Same-sex relationships in Austria that are recognised as civil partnerships under British law are known as ‘eingetragene Partnerschaft’, or ‘registered partnership’.
 
-Contact the relevant local authorities in Austria to find out about local laws, including what documents you’ll need.
+Contact the relevant local authorities in Austria to find out about local civil partnership and same-sex marriage laws, including what documents you’ll need.
 
 ##What you need to do
 
-You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to enter into a civil partnership or equivalent in Austria.
+You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry or enter into a civil partnership or equivalent in Austria.
 
-Contact the local British embassy or consulate where you’re planning the ceremony to find out what you need to do.
+To get a CNI, you must post notice of your intended marriage or civil partnership ceremony in Austria. You can do this at the British embassy or in front of a notary public.
 
-$A
-British Embassy Vienna - Consular Services
-Jauresgasse 12
-1030 Vienna
-Austria
-$A
+You’ll need to have been living in Austria for at least 3 full days before you can post notice, for example if you arrive in the country on Thursday, the earliest you can post notice is the following Monday.
 
-$C
-Telephone: +43 (1) 716130
+[Make an appointment at the embassy in Vienna](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-vienna/notice-of-marriage-or-civil-partnership/slot_picker).
 
-[British Embassy Vienna - Consular Services - opening hours](https://www.gov.uk/world/organisations/british-embassy-vienna/office/british-embassy-vienna-consular-services)
-$C
+You’ll need to provide supporting documents, including:
+
+- your passport
+- proof of residence, such as a residence certificate - check with the embassy or notary public to find out what you need
+- equivalent documents for your partner
+
+You’ll need to complete a [‘Notice of marriage’](/government/publications/notice-of-marriage-form--2) form and an [‘Affidavit for marriage’](/government/publications/affirmationaffidavit-of-marital-status-form) form.
+
+You can download and fill in (but not sign) the forms in advance.
+
+You must take the forms with you to your appointment.
+
+%The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
+
+If you or your partner have been divorced, widowed or previously in a civil partnership, you’ll also need whichever of the following documents is appropriate:
+
+- a [decree absolute or final order](/copy-decree-absolute-final-order)
+- a civil partnership dissolution or annulment certificate
+- your (or your partner’s) former spouse or civil partner’s [death certificate](/order-copy-birth-death-marriage-certificate)
+
+^You’ll also need to provide evidence of nationality or residence if the divorce or dissolution took place outside the UK. You’ll need to get it [legalised](/get-document-legalised) and [translated](/government/collections/lists-of-translators-and-interpreters) if it’s not in English.^
+
+###What happens next
+
+The embassy or notary public will charge a fee for taking the oath.
+
+If you give notice at a notary public, you must post the signed forms and any supporting documents to your nearest British embassy or consulate afterwards.
+
+^The embassy or consulate may charge a fee to return your documents to you.^
+
+The consulate will display your notice of marriage publicly for 7 days.
+
+They’ll then issue your CNI (as long as nobody has registered an objection). There is an additional fee for this.
+
+^You do not need to stay in the country while your notice is posted.^
 
 ## Fees
 
@@ -30,7 +59,8 @@ $C
 
 You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Austria](/government/publications/austria-consular-fees).
 
-<%= render partial: 'how_to_pay.govspeak.erb', locals: {calculator: calculator} %>
+You can pay by Mastercard or Visa credit card. Cash is accepted in some circumstances.
 
+If you do not have a credit card of your own, the embassy will accept a credit card payment from a friend or relative. They should fill in and sign the [credit card authorisation form](/government/publications/passport-credit-debit-card-payment-authorisation-slip-austria) and attach a copy of their passport or ID card. You should then bring this with you to your appointment.
 
-
+*[CNI]: certificate of no impediment
