--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/austria/third_country/partner_british/_same_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/austria/third_country/partner_british/_same_sex.erb
@@ -1,38 +1,23 @@
+It’s possible to have either a civil partnership or a same-sex marriage in Austria.
+
 Same-sex relationships in Austria that are recognised as civil partnerships under British law are known as ‘eingetragene Partnerschaft’, or ‘registered partnership’.
 
-Contact the relevant local authorities in Austria to find out about local laws, including what documents you’ll need.
+Contact the [Embassy of Austria](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local civil partnership and same-sex marriage laws, including what documents you’ll need.
 
-You should also check the [travel advice for Austria](/foreign-travel-advice/austria).
+^You should get [legal advice](/government/collections/list-of-lawyers) and check the [travel advice](/foreign-travel-advice/austria) for Austria before making any plans.^
 
 ##What you need to do
 
-You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to enter into a civil partnership or equivalent in Austria.
+You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
 
-Contact the local British embassy or consulate where you’re planning the ceremony to find out what you need to do.
+There are 2 ways you can get a CNI:
 
-$A
-British Embassy Vienna - Consular Services
-Jauresgasse 12
-1030 Vienna
-Austria
-$A
+- [go to the UK and post notice with a UK registrar](/marriage-abroad/y/austria/uk/partner_local/same_sex)
+- [go to Austria and post notice at the embassy or consulate there](/marriage-abroad/y/austria/ceremony_country/partner_local/same_sex)
 
-$C
-Telephone: +43 (1) 716130
+%If you choose to post notice, you’ll normally have to wait at least 13 days for your CNI. It can take longer depending on the local authorities’ processes and the time of year.%
 
-[British Embassy Vienna - Consular Services - opening hours](https://www.gov.uk/world/organisations/british-embassy-vienna/office/british-embassy-vienna-consular-services)
-$C
-
-## Fees
-
-<%= render partial: 'consular_fees_table_items.govspeak.erb',
-    collection: calculator.services,
-    as: :service,
-    locals: { calculator: calculator } %>
-
-You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Austria](/government/publications/austria-consular-fees).
-
-<%= render partial: 'how_to_pay.govspeak.erb', locals: {calculator: calculator} %>
+*[CNI]:Certificate of no impediment
 
 
 
