--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/austria/uk/partner_other/_same_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/austria/uk/partner_other/_same_sex.erb
@@ -1,42 +1,38 @@
+It’s possible to have either a civil partnership or a same-sex marriage in Austria.
+
 Same-sex relationships in Austria that are recognised as civil partnerships under British law are known as ‘eingetragene Partnerschaft’, or ‘registered partnership’.
 
 Contact the [Embassy of Austria](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local laws, including what documents you’ll need.
 
-You should also check the [travel advice for Austria](/foreign-travel-advice/austria).
+^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Austria](/foreign-travel-advice/austria) before making any plans.^
 
 ##What you need to do
 
-You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to enter into a civil partnership or equivalent in Austria.
+You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry or enter into a civil partnership or equivalent in Austria.
 
-Contact the local British embassy or consulate where you’re planning the ceremony to find out what you need to do.
+You can normally get a CNI by giving a notice of marriage at your local register office or registrar in the UK. Find your local office or registrar in [England and Wales](/register-offices), [Scotland](https://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](https://www.nidirect.gov.uk/contacts/district-registrars-northern-ireland), [Isle of Man](https://www.gov.im/categories/births-deaths-and-marriages/), [Jersey](https://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us).
 
-$A
-British Embassy Vienna - Consular Services
-Jauresgasse 12
-1030 Vienna
-Austria
-$A
+^A CNI issued in Scotland is valid for 3 months. A CNI issued in England, Wales or Northern Ireland will not expire. Check with your local register office to find out how long a CNI is valid if you live in the Channel Islands or the Isle of Man. You should also check with the local authorities in Austria to find out how long a CNI is valid under local law.^
 
-$C
-Telephone: +43 (1) 716130
+###Legalisation and translation
 
-[British Embassy Vienna - Consular Services - opening hours](https://www.gov.uk/world/organisations/british-embassy-vienna/office/british-embassy-vienna-consular-services)
-$C
+You might need to exchange your UK-issued CNI for one that’s valid in Austria at the nearest embassy or consulate to where you’re getting married.
+
+You should also check if it needs to be:
+
+- [‘legalised’](/get-document-legalised) (certified as genuine)
+- translated - [find a translator abroad](/government/collections/list-of-lawyers), or in the UK through the [Institute of Linguists](https://www.ciol.org.uk/)     
+
+You should also check with the local authorities in Austria to find out if you need to provide legalised and translated copies of any other documents.
+
+%The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
 
 ##Naturalisation of your partner if they move to the UK
 
 Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
 
-## Fees
+*[CNI]: certificate of no impediment
 
-<%= render partial: 'consular_fees_table_items.govspeak.erb',
-    collection: calculator.services,
-    as: :service,
-    locals: { calculator: calculator } %>
-
-You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Austria](/government/publications/austria-consular-fees).
-
-<%= render partial: 'how_to_pay.govspeak.erb', locals: {calculator: calculator} %>
 
 
 
