Added civil partnership

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/panama/_title.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/panama/_title.govspeak.erb
@@ -1,5 +1,5 @@
 <% if calculator.partner_is_same_sex? %>
-  Same-sex marriage in Panama
+  Civil partnership and same sex marriage in Panama
 <% else %>
   Marriage in Panama
 <% end %>
