--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_tourism_visa_partner.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_tourism_visa_partner.govspeak.erb
@@ -5,7 +5,13 @@
 <% content_for :body do %>
   The visa you need depends on your partner or family member’s situation.
 
-  ## They’re from the EEA
+  ## They’re a British citizen
+
+  Apply for a [Standard Visitor visa](/standard-visitor-visa).
+
+  If you've been living with them in another EEA country and they've been supporting you, you may be able to [make a 'Surinder Singh' application](/family-permit/surinder-singh) for an EEA family permit.
+
+  ## They’re from elsewhere in the EEA
 
   Apply for a [family permit](/family-permit).
 
