2019/2020 uprating for pay-leave-for-parents
Statutory pay goes from 145.18 to 148.68

--- a/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_additional_pat_pay.govspeak.erb
+++ b/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_additional_pat_pay.govspeak.erb
@@ -39,3 +39,9 @@ Weekly rate (between 6 April 2017 and 5 April 2018) | £140.98, or 90% of their 
 Weekly rate (between 6 April 2018 and 5 April 2019) | £145.18, or 90% of their average weekly earnings (whichever is lower).
 
 <% end %>
+
+<% if calculator.paid_leave_is_in_tax_year?(2019) %>
+
+Weekly rate (between 6 April 2019 and 5 April 2019) | £148.68, or 90% of their average weekly earnings (whichever is lower).
+
+<% end %>
