--- a/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_mat_pay.govspeak.erb
+++ b/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_mat_pay.govspeak.erb
@@ -42,6 +42,12 @@ Remaining weeks (between 6 April 2018 and 5 April 2019) | £145.18 per week or 9
 
 <% end %>
 
+<% if calculator.paid_leave_is_in_tax_year?(2019) %>
+
+Remaining weeks (between 6 April 2019 and 5 April 2020) | £148.68 per week or 90% of her average weekly earnings (before tax), whichever is lower
+
+<% end %>
+
 Tell the mother’s employer | 28 days before she wants want to start maternity pay
 
 Tax and National Insurance will be deducted.
