--- a/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_mat_shared_pay.govspeak.erb
+++ b/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_mat_shared_pay.govspeak.erb
@@ -33,3 +33,9 @@ Shared Parental Pay (between 6 April 2017 and 5 April 2018) | £140.98 per week 
 Shared Parental Pay (between 6 April 2018 and 5 April 2019) | £145.18 per week or 90% of their average weekly earnings (before tax), whichever is lower
 
 <% end %>
+
+<% if calculator.paid_leave_is_in_tax_year?(2019) %>
+
+Shared Parental Pay (between 6 April 2019 and 5 April 2020) | £148.68 per week or 90% of their average weekly earnings (before tax), whichever is lower
+
+<% end %>
