--- a/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_pat_pay.govspeak.erb
+++ b/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_pat_pay.govspeak.erb
@@ -40,6 +40,12 @@ Weekly rate (between 6 April 2018 and 5 April 2019) | £145.18 per week or 90% o
 
 <% end %>
 
+<% if calculator.paid_leave_is_in_tax_year?(2019) %>
+
+Weekly rate (between 6 April 2019 and 5 April 2020) | £148.68 per week or 90% of their average weekly earnings (before tax), whichever is lower
+
+<% end %>
+
 <% if calculator.paid_leave_is_in_tax_year?(2013) %>
 
 Tell the partner’s employer | 28 days before they want to start paternity pay
