China opposite sex - payments
Change in payment options for affidavit and affirmation

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_opposite_sex.govspeak.erb
@@ -10,7 +10,10 @@ If you’re a man you must be at least 22 and if you’re a woman you must be at
 
 You need to swear an affirmation or affidavit that says you’re legally allowed to get married.
 
-This costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %> per person. You can pay in the [local currency](/government/publications/china-consular-fees) with cash or credit card.
+This costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %> per person. You can pay:
+
+- in British pounds by Visa or Mastercard
+- in the [local currency](/government/publications/china-consular-fees) with cash
 
 An affidavit is a religious document. If you do not want to swear a religious oath, you can sign an affirmation instead.
 
