Updated emergency travel document section
Co-authored-by: Elliot Crosby-McCullough <elliot.cm@gmail.com>

--- a/lib/smart_answer_flows/report-a-lost-or-stolen-passport/outcomes/contact_the_embassy.govspeak.erb
+++ b/lib/smart_answer_flows/report-a-lost-or-stolen-passport/outcomes/contact_the_embassy.govspeak.erb
@@ -15,7 +15,7 @@ If you do not need to travel urgently, you can [apply for a replacement passport
 
 ##Emergency travel documents
 
-If you need to travel in the next 6 weeks, you may be able to get an [emergency travel document](/emergency-travel-document) from the British Embassy, High Commission or Consulate in the country you’re in. You will have to pay a fee.
+If you need to travel in the next 6 weeks, you may be able to [apply for an emergency travel document](/emergency-travel-document). You will have to pay a fee.
 
 You do not also need to report your passport lost or stolen online - you will do it as part of your emergency travel document application.
 
