--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_tourism_visa_partner.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_tourism_visa_partner.govspeak.erb
@@ -7,9 +7,9 @@
 
   ## They’re a British citizen
 
-  Apply for a [Standard Visitor visa](/standard-visitor-visa).
+  In most cases, you should apply for a [Standard Visitor visa](/standard-visitor-visa).
 
-  If you've been living with them in another EEA country and they've been supporting you, you may be able to [make a 'Surinder Singh' application](/family-permit/surinder-singh) for an EEA family permit.
+  You should [apply for a ‘Surinder Singh’ EEA family permit](/family-permit/surinder-singh) instead if you've been living with them in an EEA country other than the UK and they've been supporting you.
 
   ## They’re from elsewhere in the EEA
 
