Simplified info about the affirmation/affidavit process

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/indonesia/ceremony_country/partner_other/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/indonesia/ceremony_country/partner_other/_opposite_sex.govspeak.erb
@@ -1,37 +1,17 @@
-Make an appointment at the British embassy or consulate in Indonesia to swear an affirmation or affidavit (written statement of facts) that you’re free to marry.
+##Prove you’re free to get married
 
-[Make an appointment at the embassy in Jakarta.](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-jakarta/oaths-affirmations-and-affidavits/slot_picker)
+You need to swear an affirmation or affidavit that says you’re legally allowed to get married.
 
-[Make an appointment at the consulate in Bali.](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-bali/oaths-affirmations-and-affidavits/slot_picker)
+Make an appointment to swear your affirmation or affidavit at the [embassy in Jakarta](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-jakarta/oaths-affirmations-and-affidavits/slot_picker) or the [consulate in Bali](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-bali/oaths-affirmations-and-affidavits/slot_picker).
 
-^Contact the local civil registry office in Indonesia to find out when you need to swear your affirmation or affidavit.^
+This costs £50 per person.
 
-You need to complete 2 copies of the [affirmation (non religious) or affidavit (religious) of marriage form](/government/publications/marriage-in-indonesia).
-Email one copy to the British embassy in Jakarta at least 2 days before your appointment. Take the other copy to your appointment.
+##What happens next
 
-$C
-<consulate.jakarta@fco.gov.uk>
-$C
-
-You must pay a fee to the British embassy in Jakarta - email them to find out how to pay.
+After you’ve booked your appointment, a consular officer will contact you with information about the affirmation or affidavit process and what you’ll need to bring.
 
 ^Your partner must get an affirmation or affidavit as well.^
 
-##What you need to take
+##Naturalisation of your partner if they move to the UK
 
-You must take all of the following to your appointment:
-
-- a copy of your affirmation or affidavit
-- your passport and your partner’s passport
-- a [decree absolute or final order](/copy-decree-absolute-final-order) or [death certificate](/order-copy-birth-death-marriage-certificate/) (if you’ve been divorced or widowed)
-- evidence if you’ve changed your name by deed poll
-
-## Fees
-
-<%= render partial: 'consular_fees_table_items.govspeak.erb',
-    collection: calculator.services,
-    as: :service,
-    locals: { calculator: calculator } %>
-
-
-
+Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
